samples/_failures_safe/1761319527_2bcbc5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1dad76ec.c: In function ‘main’:
./samples/SAFE/__tmp_1dad76ec.c:139:9: error: expected declaration or statement at end of input
  139 |         }
      |         ^
./samples/SAFE/__tmp_1dad76ec.c:139:9: error: expected declaration or statement at end of input
